<resources>
    <string name="app_name">About Me</string>
    <string name="home_page">Home Page</string>
    <string name="skils_page">Skils Page</string>
    <string name="about_page">A little bit about me</string>
    <string name="portfolio_page">Portfolio</string>
    <string name="contact_page">Contact page</string>
    <string name="map_page">Map Page</string>
    <string name="my_full_name">Shilin Pavel</string>
    <string name="my_email">pavel@truebest.ru</string>
    <string name="story_about_me">Hi. My name is Pavel, and at the moment i live, study and work in St. Petersburg, as a graduate student of the second year of study at the St. Petersburg State University of Telecommunications. prof. Bonch-Bruyevich the department of communication networks. By nature I am a punctual, organized, ambitious and cheerful young man who is always open to new ideas and people. The highest my interest associated with the use of innovative positioning systems, data processing and communication in the field of transport. The topic of my dissertation is also associated transport, namely the development of a wireless network for vehicles VANET - (Vehicular Ad hoc Network). Name of the dissertation topic - Development and research models to ensure quality of service in networks VANET. Previously, I studied at the Russian State University of Innovative Technologies and Business. Due to the active life position many times was a member of various Russian and international conferences in the field of information and telecommunication technologies. There are also the publication of my research work in various Russian and international journals. Is a Fellow of the program of work on the topic UMNIK "Hardware-software system to ensure the safe movement of vehicles." During high school, showed leadership in the field of recreation, was president of the school.</string>
    <string name="my_txt">Portrait orientation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_name">Your name</string>
    <string name="hint_emal">Your email</string>
    <string name="hint_phone">Your phone</string>
    <string name="hint_message">Your message</string>
    <string name="button_send">Send</string>
    <string name="send_ok">Data has been successfully sent</string>
    <string name="send_fail">Send fail</string>
    <string name="warn_fill_fields">Please fill all fields</string>
    <string name="commit_send">Commit sending</string>
    <string name="are_you_ready">Are you realy want to send the data?</string>
    <string name="dlg_btn_ok">Yes</string>
    <string name="dlg_btn_cancel">No</string>
    <string name="snack_retry">Retry</string>
    <string name="menu_communicate">Communicate</string>
    <string name="hint_age">Your age</string>

</resources>
