<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_page"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home_page" />
        <item
            android:id="@+id/nav_about_page"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/about_page" />
        <item
            android:id="@+id/nav_skill_page"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/skils_page" />
        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/portfolio_page" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/map_page" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_page" />
        </menu>
    </item>

</menu>
